--- a/07-Introduction-to-probability.qmd
+++ b/07-Introduction-to-probability.qmd
@@ -255,7 +255,7 @@ In any case, whilst I personally prefer the Bayesian view, the majority of stati
 
 好啦,假如你真的理解觀點之間的區別,你應該想知道**那一種觀點是正確的**?老實說,我不知道有沒有正確的答案。據我所知,次數主義追隨者思考事件序列的方式，以數學來看沒有什麼不正確的,貝氏觀點設定一個持有信念的理性代理者，這一點也有數學基礎。其實，如果讀者能研究得更深入,會發現兩個觀點在很多事情的意見是一致的。許多基於次數主義方法所做出的決定，也是貝氏觀點追隨者認為一個理性代理者也有相同結論；許多貝氏主義方法具有相當明顯的次數主義特性。  
 
-我(原作者)自認是務實主義者,所以我會使用任何我信任的統計方法。工作多年的經驗,使我更喜歡貝氏方法,原因我將在本書的最後單元解釋。但是我並不會不再使用次數主義方法，而且不是每個人都能在兩種觀點之間自在轉換。像是 羅納德·費雪爵士,20世紀統計學巨擘之一,就是徹底反對貝氏觀點，立場最極端的反對者。他在討論統計學數學基礎的著作裡提到主觀機率觀點是 “不可突破的叢林，(放任發展)會阻止精確統計學概念的進步” [ @Fisher1922b, 第 311 頁]。反方代表如心理學家保羅·米爾,他認為依靠次數主義方法會讓科學家變成 “有學術生產力但無法提出真正洞見的書呆子，,與次數主義相伴的快樂學術路上留下了一長串受害者,其中沒有任何人輸出的科學知識能有效地開枝散葉”[@Meehl1967, 第 114 頁]。讀者有心挖掘爭論觀點的文獻會發現,現代統計學的歷史和暢銷小說一樣精采。  
+我(原作者)自認是務實主義者,所以我會使用任何可相信的統計方法。工作多年的經驗,使我更喜歡貝氏方法,理由我將在本書的最後單元解釋。但是我並不會不再使用次數主義方法，而且不是每個人都能在兩種觀點之間自在轉換。像是 羅納德·費雪爵士(Sir Ronald Fisher),20世紀統計學巨擘之一,就是徹底反對貝氏觀點，立場最極端的反對者。他在討論統計學數學基礎的著作裡提到主觀機率觀點是 “不可突破的叢林，(放任發展)會阻止精確統計學概念的進步” [ @Fisher1922b, 第 311 頁]。反方代表如心理學家保羅·米爾(Paul Meehl),他認為依靠次數主義方法會讓科學家變成 “能生產知識但無法提出真正洞見的書呆子，,與次數主義相伴的快樂學術路上留下了一整列受害者,其中沒有任何人輸出的科學知識能有效地開枝散葉”[@Meehl1967, 第 114 頁]。讀者有心挖掘爭論觀點的文獻會發現,現代統計學的歷史和暢銷小說一樣精采。  
 
 無論如何,雖然我(原作者)比較喜歡貝氏主義的觀點,但大多數統計分析都是建立在次數主義方法論，有用的推論方法都有實用價值。本書介紹的統計方法與多數心理學系統計課內容大致相同,如果讀者想了解大多數心理學家使用的統計工具,需要好好掌握次數主義方法。我能保證,學習次數主義的統計方法不會浪費時間。就算之後有一天想要跳到貝氏的陣營,讀者也應該至少要讀通一本談論 “正統” 次數主義觀點的書。此外,我不會完全忽略貝氏觀點。之後每個章節,我會在適當的段落添加一些貝氏觀點, 最後的 @sec-Bayesian-statistics 會詳細介紹貝氏觀點的統計方法。  
 
