--- a/Preface.qmd
+++ b/Preface.qmd
@@ -1,28 +1,54 @@
 # 前言 {.unnumbered}
 
-## 沿革與版權說明 {.unnumbered}
+## 中文化版本沿革與版權說明 {.unnumbered}
+
+中文化電子書翻譯及改編自統計學教材~ Navarro DJ and Foxcroft DR (2022). learning statistics with jamovi: a tutorial for psychology students and other beginners. (Version 0.75). [DOI: 10.24384/hgc3-7p15](https://dx.doi.org/10.24384/hgc3-7p15)
+
+中文化電子書採用[姓名標示-相同方式分享 4.0 國際](https://creativecommons.org/licenses/by-sa/4.0/deed.zh-hant)開放授權釋出。任何人得以任何媒介或格式重製及散布本素材，或重混、轉換本素材、及依本素材建立新素材且為任何目的，包含商業性質之使用。只要使用者遵守授權條款規定，授權人不能撤回任何使用者使用本素材的自由。 
+
+### 中文化編修進度表
+
+- AI初翻: 已全部完成。
+- 第一次編修: 依各單元完成次單元估計。
+- 第二次編修: 歡迎使用者透過各單元網頁右方**編輯本頁面**或**問報問題**的留言連結，協助編修及提出指正。
+
+|單元|AI初翻|第一次編修|第二次編修|
+|---|---|---|---|
+|[單元1](01-Why-do-we-learn-statistics.html)|100%|100%|0%|
+|[單元2](02-A-brief-introduction-to-research-design.html)|100%|100%|0%|
+|[單元3](03-Getting-started-with-jamovi.html)|100%|100%|0%|
+|[單元4](04-Descriptive-statistics.html)|100%|100%|0%|
+|[單元5](05-Drawing-graphs.html)|100%|100%|0%|
+|[單元6](06-Pragmatic-matters.html)|100%|100%|0%|
+|[中途單元](Prelude-Part-IV.html)|100%|100%|0%|
+|[單元7](07-Introduction-to-probability.html)|100%|100%|0%|
+|[單元8](08-Estimating-unknown-quantities-from-a-sample.html)|100%|100%|0%|
+|[單元9](09-Hypothesis-testing.html)|100%|100%|0%|
+|[單元10](10-Categorical-data-analysis.html)|100%|10%|0%|
+|[單元11](11-Comparing-two-means.html)|100%|0%|0%|
+|[單元12](12-Correlation-and-linear-regression.html)|100%|0%|0%|
+|[單元13](13-Comparing-several-means-one-way-ANOVA.html)|100%|0%|0%|
+|[單元14](14-Factorial-ANOVA.html)|100%|0%|0%|
+|[單元15](15-Factor-Analysis.html)|100%|75%|0%|
+|[單元16](16-Bayesian-statistics)|100%|0%|0%|
+
+
+## 英文版版本沿革與版權說明 {.unnumbered}
 
 This book is an adaptation of DJ Navarro (2018). Learning statistics with R: A tutorial for psychology students and other beginners. (Version 0.6). [https://learningstatisticswithr.com/](https://learningstatisticswithr.com/).
 
+
 The book is released under a [creative commons CC BY-SA 4.0 licence](https://creativecommons.org/licenses/by-sa/4.0/). This means that this book can be reused, remixed, retained, revised and redistributed (including commercially) as long as appropriate credit is given to the authors. If you remix, or modify the original version of this open textbook, you must redistribute all versions of this open textbook under the same license - CC BY-SA.
 
-## Preface to Version 0.75 {.unnumbered}
 
-In this version we have updated the figures, images and text to maintain
-compatibility with latest versions of jamovi (2.2); many thanks to Peter
-Fisk for his help with this. Also tweaked and corrected are a few
-sections where improvements have been suggested by readers. This has
-mainly included fixing typos but also in places correcting conceptual
-detail, for example we have updated the information on kurtosis to
-reflect that it isn’t really about distribution “pointiness” and instead
-kurtosis is about whether data distributions have thin or fat tails.
-Thanks to all the readers who made suggestions, either through
-contacting me by email, or raising an issue on github.
+### Preface to Version 0.75 {.unnumbered}
+
+In this version we have updated the figures, images and text to maintain compatibility with latest versions of jamovi (2.2); many thanks to Peter Fisk for his help with this. Also tweaked and corrected are a few sections where improvements have been suggested by readers. This has mainly included fixing typos but also in places correcting conceptual detail, for example we have updated the information on kurtosis to reflect that it isn’t really about distribution “pointiness” and instead kurtosis is about whether data distributions have thin or fat tails. Thanks to all the readers who made suggestions, either through contacting me by email, or raising an issue on github.
 
 *David Foxcroft  
 February 9th, 2022*
 
-## Preface to Version 0.70 {.unnumbered .unlisted}
+### Preface to Version 0.70 {.unnumbered .unlisted}
 
 This update from version 0.65 introduces some new analyses. In the ANOVA
 chapters we have added sections on repeated measures ANOVA and analysis
@@ -34,11 +60,7 @@ explanations, and a bit less algebra. I’m not sure this is a good thing,
 and might add the algebra in a bit later. But it reflects both my
 approach to understanding and teaching statistics, and also some
 feedback I have received from students on a course I teach. In line with
-this, I have also been through the rest of the book and tried to
-separate out some of the algebra by putting it into a box or frame. It’s
-not that this stuff is not important or useful, but for some students
-they may wish to skip over it and therefore the boxing of these parts
-should help some readers.
+this, I have also been through the rest of the book and tried to separate out some of the algebra by putting it into a box or frame. It’s not that this stuff is not important or useful, but for some students they may wish to skip over it and therefore the boxing of these parts should help some readers.
 
 With this version I am very grateful to comments and feedback received
 from my students and colleagues, notably Wakefield Morys-Carter, and
@@ -51,7 +73,7 @@ Love for helping with that.
 *David Foxcroft  
 February 1st, 2019*
 
-## Preface to Version 0.65 {.unnumbered .unlisted}
+### Preface to Version 0.65 {.unnumbered .unlisted}
 
 In this adaptation of the excellent ‘Learning statistics with R’, by
 Danielle Navarro, we have replaced the statistical software used for the
@@ -74,7 +96,7 @@ particularly Dr David Emery and Kirsty Walter.
 *David Foxcroft  
 July 1st, 2018*
 
-## Preface to Version 0.6 {.unnumbered .unlisted}
+### Preface to Version 0.6 {.unnumbered .unlisted}
 
 The book hasn’t changed much since 2015 when I released Version 0.5 –
 it’s probably fair to say that I’ve changed more than it has. I moved
@@ -107,7 +129,7 @@ tidyverse… I hear that’s become rather important to R these days :-)
 Best,  
 *Danielle Navarro*
 
-## Preface to Version 0.5 {.unnumbered .unlisted}
+### Preface to Version 0.5 {.unnumbered .unlisted}
 
 Another year, another update. This time around, the update has focused
 almost entirely on the theory sections of the book. Chapters 9, 10 and
@@ -125,7 +147,7 @@ deadlines, so the update has to go out the way it is!
 *Danielle Navarro  
 February 16, 2015*
 
-## Preface to Version 0.4 {.unnumbered .unlisted}
+### Preface to Version 0.4 {.unnumbered .unlisted}
 
 A year has gone by since I wrote the last preface. The book has changed
 in a few important ways: Chapters 3 and 4 do a better job of documenting
@@ -156,7 +178,7 @@ at least a few people who find the book useful!
 *Danielle Navarro  
 February 4, 2014*
 
-## Preface to Version 0.3 {.unnumbered .unlisted}
+### Preface to Version 0.3 {.unnumbered .unlisted}
 
 There’s a part of me that really doesn’t want to publish this book. It’s
 not finished.
