--- a/index.qmd
+++ b/index.qmd
@@ -10,10 +10,13 @@
 
 <!--- 描述統計與推論統計邊界另類說明：如果描述統計製作的圖表已經能說明資料能呈現的一切資訊，我們還有未知要挖掘嗎 --->
 
-原書作者Danielle Navarro與David Foxcroft是任教於澳洲阿得雷德大學心理學系，教授統計學的講師，本書內容是根據Danielle Navarro自行開發的講義[Learning Statistics with R](https://learningstatisticswithr.com/)改編，書中有許多例子是採用澳洲政府或民間機構收集的資料。除了解釋統計原理，原作者的大部分用詞接近日常對話，因此除了討論重要觀念的部分，中文翻譯儘可能使用日常用語。如果有部分內容需要進一步解釋或增加說明，可參考譯者自行增加的腳註。
-本書使用的專用名詞譯名，主要取自國家教育研究院營運的[樂詞網](https://terms.naer.edu.tw/)以及中文維基百科。未提供翻譯的名詞皆保留英文名稱；不同領域有不一樣的翻譯名詞，譯者儘可能優先考慮心理學或統計學的譯名，未來學術界對於專有名詞有統一翻譯，本書將配合更新。本書內容使用[OpenAI](https://openai.com/)開發的自然語言聊天機器人[ChatGPT](https://chat.openai.com/)及[Anthropic](https://www.anthropic.com/)開發的大型語言模型[Claude 2.1](https://claude.ai/)進行初步翻譯，再由譯者編修。有關中文版內容的任何指教，歡迎到本書github儲存庫的[討論區](https://github.com/SCgeeker/lsj-book-zh_tw/issues)提出。
+原書作者Danielle Navarro與David Foxcroft是任教於澳洲阿得雷德大學心理學系，教授統計學的講師，本書內容是根據Danielle Navarro自行開發的教學講義[Learning Statistics with R](https://learningstatisticswithr.com/)改編，書中有許多例子是採用澳洲政府或民間機構收集的資料，中文化為保留原範例說明，於特定地理或風俗名稱增加譯註說明。除了解釋統計原理，原作者的大部分用詞接近日常對話，因此除了討論重要觀念的部分，中文翻譯儘可能使用日常用語。如果有部分內容需要進一步解釋或增加說明，可參考譯者自行增加的腳註。
 
-- 使用這本電子書修習任何實體或線上課程的同學，請先觀看[導覽影片](https://youtu.be/yZm1P3r1vrc)，了解如何使用這本書及jamovi開發團隊的資源學習。
+
+本書使用的專有名詞譯名，主要參考來源為國家教育研究院營運的[樂詞網](https://terms.naer.edu.tw/)以及中文維基百科。未有正式翻譯的專有名詞則保留英文名稱；不同領域有不一樣的翻譯名詞，譯者儘可能優先考慮心理學或統計學的釋譯，未來學術界對於專有名詞有統一翻譯，本書將配合更新。本書的中文化內容採用使用[OpenAI](https://openai.com/)開發的自然語言聊天機器人[ChatGPT](https://chat.openai.com/)及[Anthropic](https://www.anthropic.com/)開發的大型語言模型[Claude 2.1](https://claude.ai/)進行初步翻譯，再由譯者手動編修。。正式公開之初已完成第一到第九單元的中文編修，第十到第十六單元只有完成部分原理說明的中文編修。[前言](Preface.html)表列編修進度，歡迎讀者使用在各單元網頁右側的**編輯本頁面**或**問報問題**常駐連結，協助編修及提出指正。有關中文化素材的使用授權，請讀者先參閱[前言](Preface.html)的授權說明，依指定授權方式使用。
+
+
+原作者有提供本書範例之電子檔，jamovi開發團隊已設定為主要學習資料庫。雖然jamovi操作介面正在進行繁體中文詞庫開發，為保持電子書與教學影的一致性，操作示範部分保留英文詞彙，不影響讀者以熟悉的介面語言學習及操作jamovi。使用這本電子書修習任何實體或線上課程的同學，建議先觀看[導覽影片](https://youtu.be/yZm1P3r1vrc)，了解如何使用這本書及jamovi開發團隊的資源學習。
 
 <!---This textbook covers the contents of an introductory statistics class, as typically taught to undergraduate psychology, health or social science students. The book covers how to get started in jamovi as well as giving an introduction to data manipulation. From a statistical perspective, the book discusses descriptive statistics and graphing first, followed by chapters on probability theory, s
  as giving an introduction to data manipulation. From a statistical perspective, the book discusses descriptive statistics and graphing first, followed by chapters on probability theory, sampling and estimation, and null hypothesis testing. After introducing the theory, the book covers the analysis of contingency tables, correlation, *t*-tests, regression, ANOVA and factor analysis. Bayesian statistics are touched on at the end of the book.--->
